<resources>
    <string name="app_name">nooi</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="action_sign_in">Login</string>
    <string name="type_of_event">what Event?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_mobile">Enter valid mobile number</string>
    <string name="err_msg_otp">Enter OTP</string>
    <string name="err_msg_password">Enter valid password</string>
    <string name="err_msg_country_code">Enter valid Country code</string>
    <string name="not_attending">Not Attending</string>
    <string name="createevent">Create Event ?</string>
    <string name="feedback">Feedback</string>
    <string name="mute">Mute</string>
    <string name="about_us">About</string>
    <string name="logout">Logout</string>
    <string name="attending">Attending</string>
    <string name="mobicomkit_label">Applozic</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Chat using Fragment </string>
    <string name="title_section3">Messages</string>
    <string name="title_section4">ECommerce</string>
    <string name="title_section5">Messages (Activity based)</string>
    <string name="title_section6">Messages</string>
    <string name="title_section7">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Test</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world test!</string>
    <string name="ecommerce">Applozic</string>
    <string name="user_id">devashish.mamgain@gmail.com</string>
    <string name="ecommerce_button1_text">Gadgets</string>
    <string name="ecommerce_button2_text">Home</string>
    <string name="ecommerce_button3_text">PC</string>
    <string name="ecommerce_button4_text">Bags</string>
    <string name="ecommerce_button5_text">Watches</string>
    <string name="ecommerce_button6_text">Mobiles</string>
    <string name="ecommerce_button7_text">Cars</string>
    <string name="ecommerce_button8_text">Games</string>
    <string name="ecommerce_button9_text">Music</string>
    <string name="ecommerce_ad_button">Post Free Ad</string>
    <string name="ecommerce_chat_button">Chat</string>
    <string name="ecommerce_ad_text">Free Advertise</string>
    <string name="ecommerce_text1">Demo screen to show messaging integration, tap on the Chat button below</string>
    <string name="application_key">21efcc044ccaf78c1d158029d2ccf4f60</string>
    <string name="support_phone_number">+918042028425</string>
    <string name="default_server_url">https://apps.applozic.com</string>
    <string name="default_mqtt_server_url">tcp://apps.applozic.com:1883</string>
    <string name="default_media_location_folder">Applozic</string>
    <string name="order_sample_button">Chat with seller</string>
    <string name="take_order_userid">ApplozicShop</string>
    <string name="version">1.0</string>
    <string name="support_contact_display_name">Hanle solutions</string>
    <string name="support_contact_userId">hanle</string>
    <string name="support_contact_emailId">saurabh.bhat@hanlesolutions.com</string>
    <string name="support_contact_number">8147494497</string>
    <string name="support_contact_image_url">R.drawable.ic_launcher</string>
    <string name="invite_message">Hey, check out Applozic -
        Plug &amp; Play Messaging: http://www.applozic.com</string>
    <string name="facebook_app_id">2194468880571702</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
</resources>